# SEN201_AnimalShelter

./: TempREADME.md  package-lock.json
TeamAFiles/: favoriteFoods.txt  (+2 more)
animal-shelter-manager/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
animal-shelter-manager/src-tauri/capabilities/: default.json
animal-shelter-manager/src-tauri/src/: lib.rs  main.rs
animal-shelter-manager/src-tauri/src/authentication_service/: mod.rs  test.rs  types.rs
animal-shelter-manager/src-tauri/src/database_service/: mod.rs  test.rs  types.rs
animal-shelter-manager/src-tauri/src/file_service/: mod.rs  test.rs
animal-shelter-manager/src-tauri/test_artifacts/authentication_service/test_get_current_user_when_logged_in/: test.db  test_auth.db
animal-shelter-manager/src-tauri/test_artifacts/authentication_service/test_log_in_invalid_password/: test.db  test_auth.db
animal-shelter-manager/src-tauri/test_artifacts/authentication_service/test_log_in_valid_credentials/: test.db  test_auth.db
animal-shelter-manager/src-tauri/test_artifacts/authentication_service/test_log_out_when_already_logged_out/: test_auth.db
animal-shelter-manager/src-tauri/test_artifacts/authentication_service/test_log_out_when_logged_in/: test.db  test_auth.db
animal-shelter-manager/src-tauri/test_artifacts/authentication_service/test_multiple_login_logout_cycles/: test.db
animal-shelter-manager/src-tauri/test_artifacts/authentication_service/test_new_authentication_service/: test.db
animal-shelter-manager/src-tauri/test_artifacts/authentication_service/test_password_hashing_security/: test.db
(+159 files in other folders)
