[package]
name = "animal-shelter-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "animal_shelter_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"
log = "0.4.28"
dotenvy_macro = "0.15.7"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-log = "2"
chrono = { version = "0.4.42", features = ["serde"] }
tempfile = "3.23.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
strum = { version = "0.27.2", features = ["derive"] }
bcrypt = "0.17.1"
tauri-plugin-fs = "2"
